--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "repository": "git@github.com:akana/Yummy-Food-Delivery.git",
   "author": "akana <mao.akana@gmail.com>",
   "license": "MIT",
-  "private": null,
+  "private": false,
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.6",
     "nodemon": "^2.0.7"
   },
   "scripts": {
