--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "dependencies": {
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "nodemon": "^2.0.7"
   },
