--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.8.0",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "nodemon": "^2.0.7"
